@@ -31,7 +31,7 @@ dependencies {
     testImplementation 'io.quarkus:quarkus-test-kubernetes-client'
     //testImplementation 'io.rest-assured:rest-assured'
     testImplementation 'com.github.tomakehurst:wiremock-jre8:2.35.0'
-    testImplementation 'org.junit-pioneer:junit-pioneer:1.5.0'
+    testImplementation 'org.junit-pioneer:junit-pioneer:2.0.1'
     testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
 }
 
@@ -62,6 +62,12 @@ test {
     // Required because of https://github.com/quarkusio/quarkus/issues/18973
     minHeapSize = "256m"
     maxHeapSize = "1024m"
+
+    // Temporary fix environment variable test
+    jvmArgs = [
+            "--add-opens",  "java.base/java.util=ALL-UNNAMED",
+            "--add-opens",  "java.base/java.lang=ALL-UNNAMED"
+    ]
 }
 
 detekt {
